Prevent action buttons from wrapping in Safari

--- a/src/components/shortcuts-settings.css
+++ b/src/components/shortcuts-settings.css
@@ -26,6 +26,9 @@
 #shortcuts-settings-container .shortcuts-list li .shortcut-text {
   flex-grow: 1;
 }
+#shortcuts-settings-container .shortcuts-list li .shortcut-actions {
+  flex-shrink: 0;
+}
 
 #shortcuts-settings-container summary {
   cursor: pointer;
